--- a/groupup/src/components/groupPage/group.css
+++ b/groupup/src/components/groupPage/group.css
@@ -1,22 +1,91 @@
 .group-container {
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
   margin: 0px 0px 20px 0px;
   min-width: 700px;
   max-width: 800px;
   border-radius: 15px;
-  box-shadow: 2px 3px #888888;
+  padding: 10px 10px 10px 10px;
+  cursor: pointer;
+  user-select: none;
+  background-color: lightgray;
+  box-shadow: gray 1px 1px;
 }
 .group-list {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   align-content: center;
+  background-color: white;
+  padding: 20px;
+  margin: 0px 200px;
+  border-radius: 10px 10px 0 0;
+  min-height: 100vh;
 }
-img {
+.group-container img {
+  margin-right: 20px;
   height: 100px;
   width: 100px;
-  border-radius: 1000px;
+  border-radius: 100px;
   float: left;
+}
+.group-page img {
+  height: 180px;
+  width: 320px;
+  align-self: center;
+  margin: 20px;
+  border-radius: 20px;
+}
+.group-page {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  margin: 0px 200px;
+  border-radius: 10px 10px 0px 0px;
+  padding: 20px;
+  min-height: 100vh;
+  min-width: 600px;
+}
+.group-main-info {
+  margin: 5px 200px 20px 200px;
+  border-radius: 10px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  user-select: none;
+}
+.group-name-title {
+  margin: 0px;
+  display: inline-block;
+  user-select: none;
+}
+.match-button {
+  align-self: center;
+  text-align: center;
+  width: 100px;
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  background-color: lightgray;
+}
+.edit-button {
+  align-self: flex-end;
+  text-align: center;
+  width: 70px;
+  padding: 10px;
+  border-radius: 10px;
+  background-color: lightgray;
+}
+button {
+  cursor: pointer;
+}
+.group-list h2 {
+  margin: 0px 0px 20px 0px;
+  user-select: none;
+}
+.group-desc {
+  align-self: center;
+  max-width: 600px;
+  user-select: none;
 }
