--- a/groupup/src/App.css
+++ b/groupup/src/App.css
@@ -1,8 +1,9 @@
 .app-container {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  background-color: #fafafa;
+  min-height: 100vh;
+}
+.bold {
+  font-weight: bold;
 }
 
 footer {
@@ -20,7 +21,8 @@ footer {
 }
 
 .header {
-  margin: 20px 0 30px 0;
+  margin: 0px 0 30px 0;
+  padding-top: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid black;
   display: flex;
@@ -30,4 +32,5 @@ footer {
 
 .header-text {
   margin-left: 10px;
+  user-select: none;
 }
