Aligned text in group page to left
Co-authored-by: sarajoch <sarajoch@users.noreply.github.com>
Co-authored-by: SkjalgN <SkjalgN@users.noreply.github.com>

--- a/groupup/src/components/groupPage/group.css
+++ b/groupup/src/components/groupPage/group.css
@@ -52,6 +52,8 @@
   border-radius: 10px;
   background-color: white;
   display: flex;
+  justify-content: center;
+  text-align: left;
   flex-direction: column;
   user-select: none;
 }
@@ -88,4 +90,5 @@ button {
   align-self: center;
   max-width: 600px;
   user-select: none;
+  text-align: left;
 }
