--- a/groupup/src/components/groupPage/createGroup.css
+++ b/groupup/src/components/groupPage/createGroup.css
@@ -40,6 +40,7 @@
   width: 40%;
   padding: 7px 10px 7px 10px;
   outline: none;
+  cursor: pointer;
 }
 
 .group-image-container {
@@ -57,6 +58,7 @@
   height: auto;
   width: 100%;
   user-select: none;
+  cursor: pointer;
 }
 
 .error {
