--- a/groupup/src/components/groupPage/createGroup.css
+++ b/groupup/src/components/groupPage/createGroup.css
@@ -86,3 +86,18 @@
 .btn-grey {
   background-color: grey;
 }
+
+.checkbox-container {
+  display: flex;
+  align-items: center;
+  margin-top: 30px;
+}
+
+.checkbox {
+  margin-left: 15px;
+  transform: scale(1.5);
+  cursor: pointer;
+}
+
+.checkbox-label {
+}
