--- a/groupup/src/components/groupPage/filterGroups.css
+++ b/groupup/src/components/groupPage/filterGroups.css
@@ -1,26 +1,32 @@
 .filter-forms-container {
-  margin: 0 50px 50px 50px;
+  display: flex;
+  min-width: 1000px;
+  margin: 30px 30px 30px 30px;
+  border-radius: 10px;
   display: flex;
   flex-direction: column;
+  background-color: rgba(211, 211, 211, 0.281);
 }
 
 .filter-forms-container .interest-container {
   width: 100%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   margin-top: 10px;
 }
 
 .filter-input-container {
   display: flex;
+  justify-content: center;
 }
 
 .filter-input-container input {
-  margin-right: 10px;
-  margin-top: 10px;
+  margin: 10px;
   padding: 5px;
   border: 1px solid black;
+  min-width: 150px;
   border-radius: 5px;
+  
 }
 
 .filter-headers {
