--- a/groupup/src/components/groupPage/createGroup.css
+++ b/groupup/src/components/groupPage/createGroup.css
@@ -37,10 +37,12 @@
 }
 
 .select-fylke {
+  display: flex;
   width: 40%;
   padding: 7px 10px 7px 10px;
   outline: none;
   cursor: pointer;
+  justify-content: center;
 }
 
 .group-image-container {
@@ -66,12 +68,17 @@
 }
 
 .btn {
-  padding: 10px;
-  border-radius: 10px 10px 10px 10px;
-  background-color: #1059ef;
-  color: white;
-  cursor: pointer;
+  border-radius: 10px;
+  background-color: white; /* Green */
+  border: none;
+  color: black;
   margin: 10px;
+  padding: 10px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
 }
 
 .add-member-input {
@@ -86,3 +93,4 @@
 .btn-grey {
   background-color: grey;
 }
+
