--- a/groupup/src/components/groupPage/group.css
+++ b/groupup/src/components/groupPage/group.css
@@ -104,7 +104,6 @@ button {
   text-align: left;
 }
 
-
 .interest-box {
   margin: 2px;
   padding: 3px;
@@ -115,4 +114,23 @@ button {
 
 .icon {
   cursor: pointer;
+}
+
+.create-group-btn {
+  width: 100%;
+  margin: 10px 0 10px 0;
+}
+
+.select-group-header {
+  width: 720px;
+}
+
+.select-group-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.select-group-description {
+  font-weight: normal;
 }
