--- a/groupup/src/components/groupPage/group.css
+++ b/groupup/src/components/groupPage/group.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   margin: 0px 0px 20px 0px;
   min-width: 700px;
-  max-width: 800px;
+  
   border-radius: 15px;
   padding: 10px 10px 10px 10px;
   cursor: pointer;
@@ -54,7 +54,7 @@
 }
 
 .group-main-info {
-  margin: 5px 200px 20px 200px;
+  margin: 5px 5px 20px 5px;
   border-radius: 10px;
   background-color: white;
   display: flex;
@@ -71,7 +71,7 @@
   display: inline-block;
   user-select: none;
   margin-top: auto;
-  text-shadow: 1px 1px black;
+  text-shadow: 1px 1px rgb(18, 156, 0);
   
 }
 
@@ -83,7 +83,7 @@
   margin: 20px 20px 20px 20px;
   border-radius: 10px;
   background-color: grey;
-  color: #033e46;
+  color: white;
   font-size: 15px;
   cursor: pointer;
   border: none;
@@ -165,6 +165,7 @@
   padding: 10px 10px 10px 10px;
   user-select: none;
   background-color: white;
+
   
 }
 .left-container {
@@ -246,5 +247,9 @@
   height: 40px;
   width: 40px;
   border-radius: 5px;
+}
+
+.center{
+  margin:auto;
 }
 
