--- a/groupup/src/components/groupPage/group.css
+++ b/groupup/src/components/groupPage/group.css
@@ -50,7 +50,8 @@
   padding: 20px;
   min-height: 100vh;
   min-width: 600px;
-  box-shadow: 0 12px 28px 0 rgba(0, 0, 0, 0.2), 0 2px 4px 0 rgba(0, 0, 0, 0.1), inset 0 0 0 1px rgba(255, 255, 255, 0.5);
+  box-shadow: 0 12px 28px 0 rgba(0, 0, 0, 0.2), 0 2px 4px 0 rgba(0, 0, 0, 0.1),
+    inset 0 0 0 1px rgba(255, 255, 255, 0.5);
 }
 
 .group-main-info {
@@ -72,7 +73,6 @@
   user-select: none;
   margin-top: auto;
   text-shadow: 1px 1px black;
-  
 }
 
 .match-button {
@@ -87,6 +87,8 @@
   font-size: 15px;
   cursor: pointer;
   border: none;
+  background-color: #2eaf7d;
+  color: white;
 }
 
 .edit-button {
@@ -153,9 +155,7 @@
   border-radius: 15px;
   padding: 10px 10px 10px 10px;
   user-select: none;
-  background-image: linear-gradient(to left, #2eaf7eb0,#2eaf7d);
- 
- 
+  background-image: linear-gradient(to left, #2eaf7eb0, #2eaf7d);
 }
 .under-container {
   display: flex;
@@ -165,7 +165,6 @@
   padding: 10px 10px 10px 10px;
   user-select: none;
   background-color: white;
-  
 }
 .left-container {
   display: flex;
@@ -176,8 +175,6 @@
   padding: 10px 10px 10px 10px;
   user-select: none;
   background-color: white;
-  
-
 }
 .right-container {
   display: flex;
@@ -188,7 +185,6 @@
   padding: 10px 10px 10px 10px;
   user-select: none;
   background-color: white;
-
 }
 .members-container {
   display: flex;
@@ -213,7 +209,6 @@
   user-select: none;
   background-color: white;
   box-shadow: 1px 1px 1px 1px black;
-  
 }
 .info-container {
   display: flex;
@@ -226,25 +221,23 @@
   user-select: none;
   background-color: white;
   box-shadow: 1px 1px 1px 1px black;
-  
- }
+}
 
-.create-btn{
+.create-btn {
   padding: 10px;
   border-radius: 10px 10px 10px 10px;
   color: white;
   cursor: pointer;
   background-color: #033e468c;
-  margin :10px;
+  margin: 10px;
   text-decoration: none;
   display: inline-block;
   font-size: 16px;
   border: none;
 }
 
-.skjalgsittbilde{
+.skjalgsittbilde {
   height: 40px;
   width: 40px;
   border-radius: 5px;
 }
-
