--- a/groupup/src/components/groupPage/createGroup.css
+++ b/groupup/src/components/groupPage/createGroup.css
@@ -19,6 +19,8 @@
 }
 
 .group-input {
+  display: flex;
+  align-content: center;
   width: 40%;
   margin: 5px 0 5px 0;
   padding: 10px;
@@ -43,6 +45,7 @@
   outline: none;
   cursor: pointer;
   justify-content: center;
+  margin: auto;
 }
 
 .group-image-container {
@@ -106,5 +109,16 @@
   cursor: pointer;
 }
 
-.checkbox-label {
+.btnStor {
+  border-radius: 10px;
+  background-color: rgb(146, 146, 146); /* Green */
+  border: none;
+  color: rgb(255, 255, 255);
+  margin: 10px;
+  padding: 10px 25px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  cursor: pointer;
 }
