fixed minor styling bug
Co-authored-by: espeasj <espeasj@users.noreply.github.com>
Co-authored-by: haavabru <haavabru@users.noreply.github.com>

--- a/groupup/src/App.css
+++ b/groupup/src/App.css
@@ -1,5 +1,7 @@
 .app-container {
   background-color: #fafafa;
+  display: flex;
+  flex-direction: column;
   min-height: 100vh;
 }
 .bold {
@@ -68,7 +70,6 @@
 }
 .header-group-container p {
   margin-left: 5px;
-
 }
 
 .header-name-container p {
