--- a/groupup/src/components/groupPage/group.css
+++ b/groupup/src/components/groupPage/group.css
@@ -151,11 +151,10 @@
 .under-container {
   display: flex;
   flex-direction: row;
-  margin: 20px 20px 20px 20px;
   border-radius: 15px;
-  padding: 10px 10px 10px 10px;
   user-select: none;
   background-color: white;
+  margin-top: 20px;
 }
 .left-container {
   display: flex;
@@ -163,7 +162,7 @@
   min-height: 500px;
   width: 50%;
   border-radius: 15px;
-  padding: 10px 10px 10px 10px;
+  padding: 10px 10px 10px 0;
   user-select: none;
   background-color: white;
 }
@@ -173,7 +172,7 @@
   min-height: 500px;
   width: 50%;
   border-radius: 15px;
-  padding: 10px 10px 10px 10px;
+  padding: 10px 0 10px 10px;
   user-select: none;
   background-color: white;
 }
