add page for review

--- a/groupup/src/App.css
+++ b/groupup/src/App.css
@@ -30,6 +30,7 @@
   justify-content: space-between;
   align-items: center;
   color: white;
+  box-shadow: 0 3px 10px rgb(0 0 0 / 0.2);
 }
 
 .header-text {
