--- a/groupup/src/App.css
+++ b/groupup/src/App.css
@@ -1,17 +1,15 @@
 .app-container {
   background-color: #fafafa;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
 }
 .bold {
   font-weight: bold;
 }
 
 .footer {
-  display: flex;
-  align-self: center;
-  justify-self: flex-end;
+  margin-top: auto;
   padding: 20px 0 20px 0;
   width: 100%;
   background-color: #2eaf7d;
